# process-gpt-memento

./: .dockerignore  .env.example  .gitignore  Dockerfile  Pipfile  README.md  auth.py  auth_utils.py  config.py  contents2.txt  convert_to_html.py  docker-compose.yml  document_loader.py  form2docx_converter.py  google_drive_loader.py  image_storage_utils.py  ingest_router.py  inspect_chroma.py  llm.py  main.py  markdown_converter.py  md2docx_advanced.py  md2html_converter.py  memento-service.py  memento-service_bak.py  ppt.py  pyproject.toml  rag_chain.py  requirements.txt  sample.py  starter.py  supabase_storage_loader.py  test_agent_three_cases.py  test_compare_contracts.py  test_ingest_contracts.py  vector_store.py  ~$QConSF-MicroServices-IPC-Netflix-Sudhir-2014.pptx
.github/workflows/: deploy-prod  deploy-prod.yaml  deploy.yml
app/: main.py
app/api/: auth.py  debug.py  ingest.py  knowledge_admin.py  legal_review.py  navigator.py  query.py  retrieve.py  summary.py
app/converters/: markdown.py  md2docx.py  md2html.py
app/core/: auth.py  config.py  logging_setup.py  memory_monitor.py  supabase_client.py
app/plugins/chunkers/: __init__.py  config.py  markdown_header.py  recursive.py  semantic.py
app/plugins/parsers/: base.py  docx_structured.py  pdfplumber_parser.py  pymupdf_parser.py  vision.py
app/plugins/retrievers/: __init__.py  base.py  hyde.py  multi_query.py  plain.py  rag_fusion.py  rewrite.py
app/schemas/: __init__.py
app/services/: document_pages.py  document_processor.py  file_to_pdf.py  glossary.py  glossary_extraction.py  glossary_prompts.py  google_drive_loader.py  knowledge_files.py  llm.py  rag_chain.py  summary_prompts.py  summary_service.py  vector_store.py  workbook_card.py
app/services/ingest/: image.py  pipeline.py  state.py
app/services/legal_review/: __init__.py  chunker.py  structurer.py
app/storage/: supabase_loader.py
benchmark/: bench_store.py  qa.py  run_benchmark.py
chunkers/: base.py  config.py  fixed_token.py  hybrid.py  recursive.py  semantic.py
data/: contents.txt
parsers/: __init__.py  config.py  pymupdf4llm_parser.py  pymupdf_parser.py  synap_parser.py
retrievers/: _llm_utils.py  config.py  hyde.py  multi_query.py  rag_fusion.py  rewrite.py
scripts/: _test_pdf_vision.py  inspect_chroma.py
storage/: default__vector_store.json  docstore.json  index_store.json
storage_/: docstore.json  index_store.json
